--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-projects/weight_analysis/src/__pycache__
-projects/weight_analysis/src/models.py
+projects/weight_analysis/src/
+projects/weight_analysis/models/
 projects/weight_analysis/src/jsonschema_checker.py
 projects/weight_analysis/extracted_source
 projects/weight_analysis/for_container/__pycache__
 projects/weight_analysis/for_container/.hypothesis
+projects/trigger_inversion/
+.vscode/
