--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ projects/weight_analysis/src/jsonschema_checker.py
 projects/weight_analysis/extracted_source
 projects/weight_analysis/for_container/__pycache__
 projects/weight_analysis/for_container/.hypothesis
-projects/trigger_inversion/
+projects/trigger_inversion/extracted_source/
+projects/trigger_inversion/src/trigger_inversion_cp.py
 .vscode/
